--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>EdTech Website</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -50,21 +50,67 @@
           </div>
         </div>
       </nav>
-      
+      <div id="carouselExampleControls" class="carousel slide py-3" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" id="banner-items">
+            <div class="card text-light">
+              <img src="images/cover/cover-1.png" class="card-img" alt="...">
+              <div class="card-img-overlay d-flex justify-content-center align-items-center bg-dark bg-opacity-75">
+                <div class="text-center banner-text">
+                  <h1 class="card-title banner-text">Get Started Digital<br>Learning</h1>
+                  <p class="card-text fs-4 pt-2">It is a long established fact that a reader will be distracted by the
+                    readable<br>content of a page when looking at its layout</p>
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
+                </div>
+
+              </div>
+            </div>
 
 
 
 
-
+          </div>
+          <div class="carousel-item active" id="banner-items">
+            <div class="card text-light">
+              <img src="images/cover/cover-2.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay d-flex justify-content-center align-items-center bg-dark bg-opacity-75">
+                <div class="text-center banner-text">
+                  <h1 class="card-title banner-text">Get Started Digital<br>Learning</h1>
+                  <p class="card-text fs-4 pt-2">It is a long established fact that a reader will be distracted by the
+                    readable<br>content of a page when looking at its layout</p>
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item active" id="banner-items">
+            <div class="card text-light">
+              <img src="images/cover/cover-3.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay d-flex justify-content-center align-items-center bg-dark bg-opacity-75">
+                <div class="text-center banner-text">
+                  <h1 class="card-title banner-text">Get Started Digital<br>Learning</h1>
+                  <p class="card-text fs-4 pt-2">It is a long established fact that a reader will be distracted by the
+                    readable<br>content of a page when looking at its layout</p>
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
     </div>
   </header>
-
-
-
-
-
-
 
 
 
