--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
   <header>
     <div class="container">
@@ -62,17 +61,12 @@
                     readable<br>content of a page when looking at its layout</p>
                   <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
                 </div>
-
               </div>
             </div>
-
-
-
-
           </div>
           <div class="carousel-item active" id="banner-items">
-            <div class="card text-light">
-              <img src="images/cover/cover-2.jpg" class="card-img" alt="...">
+            <div class="card text-light ">
+              <img src="images/cover/cover-3.jpg" class="card-img" alt="...">
               <div class="card-img-overlay d-flex justify-content-center align-items-center bg-dark bg-opacity-75">
                 <div class="text-center banner-text">
                   <h1 class="card-title banner-text">Get Started Digital<br>Learning</h1>
@@ -85,7 +79,7 @@
           </div>
           <div class="carousel-item active" id="banner-items">
             <div class="card text-light">
-              <img src="images/cover/cover-3.jpg" class="card-img" alt="...">
+              <img src="images/cover/cover-2.jpg" class="card-img" alt="...">
               <div class="card-img-overlay d-flex justify-content-center align-items-center bg-dark bg-opacity-75">
                 <div class="text-center banner-text">
                   <h1 class="card-title banner-text">Get Started Digital<br>Learning</h1>
@@ -112,6 +106,119 @@
     </div>
   </header>
 
+<main>
+  <div class="container">
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="text-center my-5">
+      <h1>Discover Our Popular <br> Courses</h1>
+      <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+    </div>
+    </div>
+  </div>
+<div class="container">
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col">
+      <div class="card mb-3" style="max-width: 570px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body my-2 mx-2">
+              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
+              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mb-3" style="max-width: 570px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body my-2 mx-2">
+              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
+              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mb-3" style="max-width: 570px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body my-2 mx-2">
+              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
+              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mb-3" style="max-width: 570px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body my-2 mx-2">
+              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
+              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mb-3" style="max-width: 570px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body my-2 mx-2">
+              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
+              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mb-3" style="max-width: 570px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body my-2 mx-2">
+              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
+              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  </div>
+</main>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
