Banner Changes done

--- a/index.html
+++ b/index.html
@@ -49,54 +49,53 @@
           </div>
         </div>
       </nav>
-      <div id="carouselExampleControls" class="carousel slide py-3" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" id="banner-items">
-            <div class="card text-light">
-              <img src="images/cover/cover-1.png" class="card-img" alt="...">
-              <div class="card-img-overlay d-flex justify-content-center align-items-center bg-dark bg-opacity-75">
-                <div class="text-center banner-text">
-                  <h1 class="card-title banner-text">Get Started Digital<br>Learning</h1>
-                  <p class="card-text fs-4 pt-2">It is a long established fact that a reader will be distracted by the
-                    readable<br>content of a page when looking at its layout</p>
-                  <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
-                </div>
+      <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="false">
+        <div class="carousel-inner rounded-2">
+          <div class="carousel-item active banner-items">
+            <div class="overlay-img" style="background-image:url(images/cover/cover-1.png) ;">
+          </div>
+              <div class="container">
+            <div class="carousel-caption banner-text ">
+              <p>Get Started Digital Learning
+                </p>
+              <p class="fs-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                Get Started</p
               </div>
             </div>
-          </div>
-          <div class="carousel-item active" id="banner-items">
-            <div class="card text-light ">
-              <img src="images/cover/cover-3.jpg" class="card-img" alt="...">
-              <div class="card-img-overlay d-flex justify-content-center align-items-center bg-dark bg-opacity-75">
-                <div class="text-center banner-text">
-                  <h1 class="card-title banner-text">Get Started Digital<br>Learning</h1>
-                  <p class="card-text fs-4 pt-2">It is a long established fact that a reader will be distracted by the
-                    readable<br>content of a page when looking at its layout</p>
-                  <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item active" id="banner-items">
-            <div class="card text-light">
-              <img src="images/cover/cover-2.jpg" class="card-img" alt="...">
-              <div class="card-img-overlay d-flex justify-content-center align-items-center bg-dark bg-opacity-75">
-                <div class="text-center banner-text">
-                  <h1 class="card-title banner-text">Get Started Digital<br>Learning</h1>
-                  <p class="card-text fs-4 pt-2">It is a long established fact that a reader will be distracted by the
-                    readable<br>content of a page when looking at its layout</p>
-                  <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        </div>
+          <div class="carousel-item active banner-items">
+            <div class="overlay-img" style="background-image:url(images/cover/cover-2.jpg) ;">
+          </div>
+              <div class="container">
+            <div class="carousel-caption banner-text ">
+              <p>Get Started Digital Learning
+                </p>
+              <p class="fs-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                Get Started</p
+              </div>
+            </div>
+        </div>
+        </div>
+          <div class="carousel-item active banner-items">
+            <div class="overlay-img" style="background-image:url(images/cover/cover-3.jpg) ;">
+          </div>
+              <div class="container">
+            <div class="carousel-caption banner-text ">
+              <p>Get Started Digital Learning
+                </p>
+              <p class="fs-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                Get Started</p
+              </div>
+            </div>
+        </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
           data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
           data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
@@ -116,12 +115,12 @@
     </div>
   </div>
 <div class="container">
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
     <div class="col">
-      <div class="card mb-3" style="max-width: 570px;">
+      <div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/course/course-1.png" class="rounded-start w-100" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body my-2 mx-2">
@@ -134,14 +133,14 @@
       </div>
     </div>
     <div class="col">
-      <div class="card mb-3" style="max-width: 570px;">
+      <div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/course/course-2.png" class="img-fluid rounded-start w-100" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <h5 class="card-title fs-5 fw-bold">Javascript Basic to advanced</h5>
               <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
               <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
             </div>
@@ -150,14 +149,14 @@
       </div>
     </div>
     <div class="col">
-      <div class="card mb-3" style="max-width: 570px;">
+      <div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/course/course-3.png" class="img-fluid rounded-start w-100" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <h5 class="card-title fs-5 fw-bold">Fullstack Web Development</h5>
               <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
               <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
             </div>
@@ -166,14 +165,14 @@
       </div>
     </div>
     <div class="col">
-      <div class="card mb-3" style="max-width: 570px;">
+      <div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/course/course-4.png" class="img-fluid rounded-start w-100" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <h5 class="card-title fs-5 fw-bold">Digital Marketing</h5>
               <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
               <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
             </div>
@@ -182,14 +181,14 @@
       </div>
     </div>
     <div class="col">
-      <div class="card mb-3" style="max-width: 570px;">
+      <div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/course/course-5.png" class="img-fluid rounded-start w-100" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <h5 class="card-title fs-5 fw-bold">Photograohy Basic Rules</h5>
               <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
               <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
             </div>
@@ -198,14 +197,14 @@
       </div>
     </div>
     <div class="col">
-      <div class="card mb-3" style="max-width: 570px;">
+      <div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/course/course-6.png" class="img-fluid rounded-start w-100" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+              <h5 class="card-title fs-5 fw-bold">Motin Graphics</h5>
               <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
               <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
             </div>
