Reday to joine done

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header>
-    <div class="container">
+    <div class="container mt-4">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand fs-1" href="#">Pro Edu</a>
@@ -49,175 +50,246 @@
           </div>
         </div>
       </nav>
-      <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="false">
-        <div class="carousel-inner rounded-2">
-          <div class="carousel-item active banner-items">
-            <div class="overlay-img" style="background-image:url(images/cover/cover-1.png) ;">
-          </div>
+      <div class="container">
+        <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="false">
+          <div class="carousel-inner rounded-2">
+            <div class="carousel-item active banner-items">
+              <div class="overlay-img" style="background-image:url(images/cover/cover-1.png) ;">
+              </div>
               <div class="container">
-            <div class="carousel-caption banner-text ">
-              <p>Get Started Digital Learning
-                </p>
-              <p class="fs-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                Get Started</p
+                <div class="carousel-caption banner-text ">
+                  <p>Get Started Digital<br>Learning
+                  </p>
+                  <p class="banner-p">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+                  <a href="#" class="btn btn-primary fs-3">Get Started</a>
+                </div>
               </div>
             </div>
-        </div>
-        </div>
-          <div class="carousel-item active banner-items">
-            <div class="overlay-img" style="background-image:url(images/cover/cover-2.jpg) ;">
-          </div>
+            <div class="carousel-item active banner-items">
+              <div class="overlay-img" style="background-image:url(images/cover/cover-2.jpg) ;">
+              </div>
               <div class="container">
-            <div class="carousel-caption banner-text ">
-              <p>Get Started Digital Learning
-                </p>
-              <p class="fs-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                Get Started</p
+                <div class="carousel-caption banner-text ">
+                  <p>Get Started Digital<br>Learning
+                  </p>
+                  <p class="banner-p">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+                  <a href="#" class="btn btn-primary fs-3">Get Started</a>
+                </div>
               </div>
             </div>
-        </div>
-        </div>
-          <div class="carousel-item active banner-items">
-            <div class="overlay-img" style="background-image:url(images/cover/cover-3.jpg) ;">
-          </div>
+            <div class="carousel-item active banner-items">
+              <div class="overlay-img" style="background-image:url(images/cover/cover-3.jpg) ;">
+              </div>
               <div class="container">
-            <div class="carousel-caption banner-text ">
-              <p>Get Started Digital Learning
-                </p>
-              <p class="fs-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                Get Started</p
+                <div class="carousel-caption banner-text ">
+                  <p>Get Started Digital<br>Learning
+                  </p>
+                  <p class="banner-p">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+                  <a href="#" class="btn btn-primary fs-3">Get Started</a>
+                </div>
               </div>
             </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
     </div>
     </div>
   </header>
 
-<main>
-  <div class="container">
-    <div class="d-flex justify-content-center align-items-center">
-      <div class="text-center my-5">
-      <h1>Discover Our Popular <br> Courses</h1>
-      <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+  <main>
+    <div class="container mt-2 mt-sm-3 mt-md-4">
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="text-center my-5">
+          <h1 class="discover-h">Discover Our Popular <br> Courses</h1>
+          <p class="discover-p py-2 ">It is a long established fact that a reader will be distracted by the readable
+            content of a page when looking at its layout.</p>
+        </div>
+      </div>
     </div>
-    </div>
-  </div>
-<div class="container">
-  <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
-    <div class="col">
-      <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="images/course/course-1.png" class="rounded-start w-100" alt="...">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
+        <div class="col">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/course/course-1.png" class="rounded-start w-100" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body my-2 mx-2">
+                  <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
+                  <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of
+                    card</p>
+                  <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-md-8">
-            <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Fundamental of UI/UX Design</h5>
-              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
-              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+        </div>
+        <div class="col">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/course/course-2.png" class="img-fluid rounded-start w-100" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body my-2 mx-2">
+                  <h5 class="card-title fs-5 fw-bold">Javascript Basic to advanced</h5>
+                  <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of
+                    card</p>
+                  <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/course/course-3.png" class="img-fluid rounded-start w-100" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body my-2 mx-2">
+                  <h5 class="card-title fs-5 fw-bold">Fullstack Web Development</h5>
+                  <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of
+                    card</p>
+                  <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/course/course-4.png" class="img-fluid rounded-start w-100" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body my-2 mx-2">
+                  <h5 class="card-title fs-5 fw-bold">Digital Marketing</h5>
+                  <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of
+                    card</p>
+                  <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/course/course-5.png" class="img-fluid rounded-start w-100" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body my-2 mx-2">
+                  <h5 class="card-title fs-5 fw-bold">Photograohy Basic Rules</h5>
+                  <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of
+                    card</p>
+                  <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/course/course-6.png" class="img-fluid rounded-start w-100" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body my-2 mx-2">
+                  <h5 class="card-title fs-5 fw-bold">Motin Graphics</h5>
+                  <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of
+                    card</p>
+                  <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="images/course/course-2.png" class="img-fluid rounded-start w-100" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Javascript Basic to advanced</h5>
-              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
-              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="d-flex justify-content-center align-content-center my-5">
+      <a href="" class="btn btn-primary fs-4">See more courses</a>
     </div>
-    <div class="col">
-      <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="images/course/course-3.png" class="img-fluid rounded-start w-100" alt="...">
+
+    <div class="container pt-5">
+      <div class="" style="background-color: #F4FAFD ;">
+        <div class="row">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6 align-items-center">
+            <img class="img-fluid w-100" src="images/working.png" alt="">
           </div>
-          <div class="col-md-8">
-            <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Fullstack Web Development</h5>
-              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
-              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="images/course/course-4.png" class="img-fluid rounded-start w-100" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Digital Marketing</h5>
-              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
-              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="images/course/course-5.png" class="img-fluid rounded-start w-100" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Photograohy Basic Rules</h5>
-              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
-              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="images/course/course-6.png" class="img-fluid rounded-start w-100" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body my-2 mx-2">
-              <h5 class="card-title fs-5 fw-bold">Motin Graphics</h5>
-              <p class="card-text fs-6">Some quick example text to build on the card title and make up the bulk of card</p>
-              <p class="card-text text-primary fs-5 fw-semibold">Price: 20$</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6 d-flex justify-content-center align-items-center">
+            <div class="pe-5 container-fluid mt-4 mt-sm-4 mt-md-4 mt-lg-4">
+              <h1 class="mb-4">Explore The E-learing Institute</h1>
+              <p class="fs-6">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+              <p class="d-none d-lg-block">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                generators on the Internet tend to repeat predefined.</p>
+              <div class="row">
+                <div class="col-6 col-md-4 col-lg-4">
+                  <h2>3.2K+</h2>
+                  <p>Online Course</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-4 ">
+                  <h2>600+</h2>
+                  <p>Expert member</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-4">
+                  <h2>1K+</h2>
+                  <p>Rating & Review</p>
+                </div>
+              </div>
 
 
-  </div>
-</main>
+
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container py-5">
+      <div class="container rounded-2 bg-primary bg-opacity-25">
+        <div class="row">
+          <div class="col-12 col-sm-6 col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+            <div class="px-5 pt-5 p-lg-5 text-center text-sm-start text-md-center text-lg-start">
+              <h1>Ready to join?</h1>
+              <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center ">
+            <a href="" class="btn btn-light fs-3 text-primary m-lg-0 mb-5">Register now</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+    </div>
+  </main>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
