--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <!-- font awsome -->
+  <script src="https://kit.fontawesome.com/760a13a473.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -50,7 +52,7 @@
           </div>
         </div>
       </nav>
-      <div class="container">
+      <div class="container-fluid">
         <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="false">
           <div class="carousel-inner rounded-2">
             <div class="carousel-item active banner-items">
@@ -112,7 +114,7 @@
   <main>
     <div class="container mt-2 mt-sm-3 mt-md-4">
       <div class="d-flex justify-content-center align-items-center">
-        <div class="text-center my-5">
+        <div class="text-center my-4">
           <h1 class="discover-h">Discover Our Popular <br> Courses</h1>
           <p class="discover-p py-2 ">It is a long established fact that a reader will be distracted by the readable
             content of a page when looking at its layout.</p>
@@ -226,7 +228,7 @@
       </div>
     </div>
     <div class="d-flex justify-content-center align-content-center my-5">
-      <a href="" class="btn btn-primary fs-4">See more courses</a>
+      <a href="" class="btn btn-primary fs-3">See more courses</a>
     </div>
 
     <div class="container pt-5">
@@ -267,7 +269,7 @@
         </div>
       </div>
     </div>
-    <div class="container py-5">
+    <div class="container my-5">
       <div class="container rounded-2 bg-primary bg-opacity-25">
         <div class="row">
           <div class="col-12 col-sm-6 col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
@@ -278,7 +280,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center ">
-            <a href="" class="btn btn-light fs-3 text-primary m-lg-0 mb-5">Register now</a>
+            <a href="" class="btn btn-light fs-5 text-primary m-lg-0 mb-5">Register now</a>
           </div>
         </div>
       </div>
@@ -286,10 +288,142 @@
 
 
 
-
-
+    <div class="container my-3">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-7 col-lg-7 text-center text-sm-start ">
+          <h1 class="mb-3">Meet Our Successful Students</h1>
+          <p style="font-size: 1.2rem ;">It is a long established fact that a reader will be distracted by the readable
+            content of a page when
+            looking at its layout.</p>
+        </div>
+      </div>
     </div>
+
+
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mt-3">
+          <div class="card h-100">
+            <img src="images/student/student-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Awlad Hossain</h5>
+              <p class="card-text">UI/UX Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mt-3">
+          <div class="card h-100">
+            <img src="images/student/student-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Jannatul Islam</h5>
+              <p class="card-text">Motion Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mt-3">
+          <div class="card h-100">
+            <img src="images/student/student-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Imran Hossain</h5>
+              <p class="card-text">Graphic Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mt-3">
+          <div class="card h-100">
+            <img src="images/student/student-4.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nishi Akter</h5>
+              <p class="card-text">Web Developer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center align-items-center my-5">
+        <a href="" class="btn btn-primary fs-5">View all</a>
+      </div>
+    </div>
+
+
+<div class="container my-5">
+  <div class="m-0 m-sm-4 m-md-0 m-lg-5">
+    <div class="text-center">
+      <h1>Frequently Asked Questions</h1>
+      <p class="f-4 mt-2 mb-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+    </div>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            What is the deffarance bewteen bootstrap and tailwind?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body fs-6">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button fs-5 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            What is symantic tag?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+          <div class="accordion-body fs-6">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button fs-5 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            What do you mean by CSS box model?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body fs-6">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFour">
+          <button class="accordion-button fs-5 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            What is the diffarance between flex-box and grid? 
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+          <div class="accordion-body fs-6">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+</div>
+</div>
   </main>
+
+  <footer class="bg-black py-4 " style="height: 20rem ;">
+    <div class="text-center text-white mx-4">
+      <h1 class="my-4">Pro Edu</h1>
+      <P>Office 41, Zawaya Buildin, Ghala Muscat, 
+        Sultanate of Oman</P>
+        <P>Privacy Ploicy  |   Terms of use</P>
+        <div>
+          <a class="fs-1 text-white mx-4" href=""><i class="fa-brands fa-facebook"></i></a>
+          <a class="fs-1 text-white mx-4" href=""><i class="fa-brands fa-instagram"></i></a>
+          <a class="fs-1 text-white mx-4" href=""><i class="fa-brands fa-tiktok"></i></a>
+          <a class="fs-1 text-white mx-4" href=""><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        
+    </div>
+  </footer>
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
